fix(projects): define a tangible height for image gallery to avoid weird "jumping" of projects

--- a/main.css
+++ b/main.css
@@ -162,6 +162,7 @@ h1, h2, h3, h4, h5, h6 {
 p {
     width: var(--width__readable-body);
     margin: 2rem auto;
+    
     text-indent: 1.5rem;
     font-size: var(--font-size__p);
 }
@@ -376,7 +377,7 @@ div.project.wrapper {
 
     /* width: var(--width__readable-body);
     margin: 2rem auto; */
-    padding: 2rem;
+    padding: 3rem;
 
     background-color: var(--hex__overlay);
     border-radius: 2rem;
@@ -493,6 +494,7 @@ li.chip p {
 div.project.image_gallery {
     display: flex;
     height: fit-content;
+    width: 100%;
 
     overflow-x: scroll;
     gap: 0.5rem;
@@ -520,4 +522,16 @@ div.project.image_gallery {
     div.project.image_gallery {
         height: calc(var(--width__readable-body) / 3);
     }
+}
+
+#container__about {
+    width: var(--width__readable-body);
+
+    margin: 2rem auto;
+    padding: 3rem;
+    
+    text-align: justify;
+
+    background-color: var(--hex__overlay);
+    border-radius: 2rem;
 }
